--- a/custom_components/elevenlabs_tts/translations/en.json
+++ b/custom_components/elevenlabs_tts/translations/en.json
@@ -29,8 +29,8 @@
                     "similarity": "Set the clarity/similarity boost of the speech synthesis",
                     "model": "Change the model used for requests",
                     "optimize_streaming_latency": "Reduce latency at the cost of quality",	
-                    "style": "Style Exaggeration",
-                    "use_speaker_boost": "Enable or disable speaker boost"					
+                    "style": "Style Exaggeration(Not supported in Model V1)",
+                    "use_speaker_boost": "Enable or disable speaker boost(Not supported in Model V1)"					
                 }
             }
         }
